--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2582,107 +2582,107 @@ stories:
   domain: http://www.dispatch.com/
   link: https://www.douglasdispatch.com/national/entertainment/scooter-braun-open-to-private-conversation-with-taylor-swift/image_36ed6134-02e1-5263-813e-59ec5fe3ad78.html
 images:
-- name: birdhouse-birdhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-space-pizza.jpg
-- name: amusement-park-amusement-park-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-clean-view.jpg
-- name: catacombs-catacombs-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: razorcliff-razorcliff-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
-- name: machine-road-machine-road-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
-- name: mistywoods-babyfoot-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-missle.jpg
-- name: oldtrain-oldtrain-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purp-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-kandinsky-bv.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: amusement-park-amusement-park-2-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-neo-instinct.jpg
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: oldtrain-oldtrain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-creativity.jpg
-- name: razorwire-DSC-0080-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-soul.jpg
-- name: rain-princess-IMG_6436.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
-- name: supreme-court-supremecourt-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-missle.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
+- name: ellis-island-ellisisland-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-circuit.jpg
+- name: catacombs-catacombs-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
+- name: crow_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
+- name: server-racks-door-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
+- name: server-cloud-server-racks-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-spagetti-accident.jpg
+- name: oldcabin-store-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
+- name: blossombar-yellow-collage-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
+- name: adam-smith-adam-smith-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
+- name: meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
+- name: border-fence-border-fence-on-hill-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crunch-paper.jpg
+- name: rain-princess-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
+- name: stories-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
+- name: store-on-corner-store-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-monet-one.jpg
+- name: store-on-corner-oldcabin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-atari-asteroids.jpg
+- name: old-church-oldchurch-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-graham-sutherland.jpg
+- name: window-window-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-rainbow-festival.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
+- name: old-door-lock-old-door-lock-2-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-paper.jpg
+- name: liberty-back-statue-liberty-back-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dali-three.jpg
+- name: aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: gypsymosaic-gypsy-eyes-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-bright-sand.jpg
+- name: catacombs-catacombs-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-color.jpg
+- name: containership-containership-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-attack-planes.jpg
+- name: locked-up-steam-lock-up-steam-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
+- name: carry-load-carryload-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-circuit.jpg
+- name: old-barn-old-barn-1500-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-hot-spicy.jpg
+- name: blossombar-sand-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-00-00.jpg
+- name: border-fence-border-fence-on-hill-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-marcel-duchamp.jpg
+- name: old-barn-old-barn-1500-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-atari-missle.jpg
+- name: oldcabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: amusement-park-amusement-park-2-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-ww2-dresden.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: christianity-christianity-under-construction-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purple-pond.jpg
+- name: abandonedbuildings_diego_rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_diego_rivera1.jpg
+- name: birdhouse-birdhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-graham-sutherland.jpg
 - name: old-house-oldhouse-bright-sand.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-bright-sand.jpg
-- name: aws-s3-stories-algo-microservices.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
-- name: stories-new-80-110-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-110-800-500-0-max-0--1--1.jpg
-- name: art-museum-art-museum-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-post-modern.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: gypsy-wagon-gypsywagon-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-space-pizza.jpg
-- name: oldhousecars-house-old-cars-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
-- name: nazi-invasion-P5290036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P5290036.jpg
-- name: store-on-corner-store-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-neo-instinct.jpg
-- name: stories-silo-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-silo-road.jpg
-- name: blossombar-space-pizza-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-00-00.jpg
-- name: castle-wall-DSC-0067-matrix.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
-- name: gypsy-wagon-gypsywagon-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-deep-connections.jpg
-- name: powerlines-power-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-granite.jpg
-- name: oldbarn-oldbarn-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purp-paper.jpg
-- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
-- name: rockingchair-rockingchair-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-brush.jpg
-- name: blossombar-blossombar-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still.jpg
-- name: school-clouds-church-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
-- name: old-church-oldchurch-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purple-pond.jpg
-- name: stories-cargo-ship-on-sea-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-blue-circuit.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-- name: hollywood-building-hollywood-building-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-plentiful.jpg
-- name: old-granary-field-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
-- name: cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-oily-mcoilface.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-600.jpg
-- name: gypsy-wagon-gypsywagon-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
-- name: gypsymosaic-gypsy-eyes-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
-- name: gypsy-wagon-gypsywagon-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-smoking-cigarette.jpg
-- name: hollywood-building-hollywood-building-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-three.jpg
-- name: oldcabin-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
+- name: rockingchair-rockingchair-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alberto-giacometti.jpg
+- name: oldhouse-granaryfield-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
+- name: hollywood-building-hollywood-building-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
+- name: white-house-whitehouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
+- name: white-house-lawn-white-house-window-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-rain.jpg
+- name: white-house-lawn-white-house-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: old-church-oldchurch-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alberto-giacometti.jpg
+- name: server-racks-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-spagetti-accident.jpg
+- name: bordercrossing-bordercrossing-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-constitution.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
 ---
 New Historical Markers To Highlight The Mellon Family To Be Dedicated Thursday.&nbsp;Book Signing With Terry Brooks The Stiel Assasin.&nbsp;Training Rides Begin For Martindales Mamma Jamma Fundraiser.&nbsp;Potential Loan Scam And Stolen Mustang Highlighted In Southgate Police Reports.&nbsp;Building A Digital Defense Against Grant Scams.&nbsp;Program Helps With Cooling Or Heating Crisis.&nbsp;Lube Plus Offers Smooth Service As Best Oil Change Winner.&nbsp;Cold Weather Revealed Many Warm Hearts.&nbsp;
